--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Logic Simulator</title>
 	</head>
-	<body>
+	<body class="overscroll-none">
 		<div id="app"></div>
 		<script type="module" src="/src/main.ts"></script>
 	</body>
